--- a/src/demo.html
+++ b/src/demo.html
@@ -20,16 +20,36 @@
 			width: 1px !important;
 			white-space: nowrap !important;
 		}
+
+		section {
+			display: grid;
+			gap: 1rem;
+			justify-content: center;
+		}
 	</style>
-	<script src="band-book.js"></script>
+	<script type="module" src="index.js"></script>
 </head>
 <body>
 	<h1 class="sr-only">Band Book - a sandbox of tools for ear musicians</h1>
 </body>
 
-<script>
-	const book = new BandBook()
-	book.init()
+<script type="module">
+	import { BandBook } from './index.js'
+
+	const data = [
+		{
+			slug: "elemental-warp",
+			title: "Elemental Warp",
+			composer: "Chad O'Brien",
+			src: "/src/assets/test-media/elemental-warp.wav",
+		}
+	]
+
+	const book = new BandBook(data)
+
+	const song = book.getSongBySlug('elemental-warp')
+	const songEl = song.getWorkspace()
+	document.querySelector('h1').after(songEl)
 </script>
 
 </html>
