--- a/src/demo.html
+++ b/src/demo.html
@@ -37,7 +37,7 @@
 
 		li {
 			display: grid;
-			grid-template-columns: 1fr 2fr;
+			grid-template-columns: 1fr 1fr 2fr;
 			gap: 1rem;
 		}
 	</style>
