--- a/src/demo.html
+++ b/src/demo.html
@@ -6,41 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Band Book</title>
 
-	<style>
-		.sr-only {
-			opacity: 0;	border: 0 !important;
-			clip: rect(1px, 1px, 1px, 1px) !important;
-			-webkit-clip-path: inset(50%) !important;
-			clip-path: inset(50%) !important;
-			height: 1px !important;
-			overflow: hidden !important;
-			margin: -1px !important;
-			padding: 0 !important;
-			position: absolute !important;
-			width: 1px !important;
-			white-space: nowrap !important;
-		}
-
-		section {
-			display: grid;
-			gap: 1rem;
-			justify-content: center;
-		}
-
-		ul {
-			display: grid;
-			gap: .5rem;
-			padding: 0;
-			margin: 0;
-			list-style: none;
-		}
-
-		li {
-			display: grid;
-			grid-template-columns: auto 1fr 1fr 2fr;
-			gap: 1rem;
-		}
-	</style>
+	<link rel="stylesheet" href="styles.css">
 	<script type="module" src="index.js"></script>
 </head>
 <body>
