--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,15 @@
 <body>
 	<h1 class="sr-only">Band Book - a sandbox of tools for ear musicians</h1>
 	<main></main>
+	<div id="bandbook-loading-overlay">
+		<svg width="100" height="100" viewBox="0 0 100 100">
+			<circle cx="50" cy="50" r="25" stroke="grey" stroke-width="3" fill="none" />
+			<circle cx="50" cy="50" r="25" stroke="lightgray" stroke-width="2" stroke-dasharray="10 7.5" fill="none" />
+		</svg>
+	</div>
 </body>
 
-<script type="module">
+<script type="module" defer>
 	import { BandBook } from './index.js'
 	const book = new BandBook(document.querySelector('main'))
 </script>
