--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,13 @@
 	<main></main>
 	<div id="bandbook-loading-overlay">
 		<svg width="100" height="100" viewBox="0 0 100 100">
-			<circle cx="50" cy="50" r="25" stroke="grey" stroke-width="3" fill="none" />
-			<circle cx="50" cy="50" r="25" stroke="lightgray" stroke-width="2" stroke-dasharray="10 7.5" fill="none" />
+			<circle cx="50" cy="50" r="5" stroke="var(--color1)" stroke-dasharray="2 1.5" />
+			<circle cx="50" cy="50" r="10" stroke="var(--color2)" stroke-dasharray="4 3" />
+			<circle cx="50" cy="50" r="15" stroke="var(--color3)" stroke-dasharray="6 4.5" />
+			<circle cx="50" cy="50" r="20" stroke="var(--color4)" stroke-dasharray="8 6" />
+			<circle cx="50" cy="50" r="25" stroke="var(--color5)" stroke-dasharray="10 7.5" />
+			<circle cx="50" cy="50" r="30" stroke="var(--color6)" stroke-dasharray="12 9" />
+			<circle cx="50" cy="50" r="35" stroke="var(--color7)" stroke-dasharray="14 10.5" />
 		</svg>
 	</div>
 </body>
