--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
 	<title>Band Book</title>
 
 	<link rel="stylesheet" href="styles.css">
+	<script>
+		// Define this here so it does not require cache invalidation
+		const CURRENT_VERSION = "0.0.1"
+	</script>
 	<script type="module" src="index.js"></script>
 </head>
 <body>
