--- a/src/index.html
+++ b/src/index.html
@@ -9,29 +9,29 @@
 	<link rel="stylesheet" href="styles.css">
 	<script>
 		// Define this here so it does not require cache invalidation
-		const CURRENT_VERSION = "0.0.1"
+		const CURRENT_VERSION = "0.0.2"
 	</script>
 	<script type="module" src="index.js"></script>
 </head>
 <body>
 	<h1 class="sr-only">Band Book - a sandbox of tools for ear musicians</h1>
-	<main></main>
+	<main class="bandbook-loading"></main>
 	<div id="bandbook-loading-overlay">
-		<svg width="100" height="100" viewBox="0 0 100 100">
-			<circle cx="50" cy="50" r="5" stroke="var(--color1)" stroke-dasharray="2 1.5" />
-			<circle cx="50" cy="50" r="10" stroke="var(--color2)" stroke-dasharray="4 3" />
-			<circle cx="50" cy="50" r="15" stroke="var(--color3)" stroke-dasharray="6 4.5" />
-			<circle cx="50" cy="50" r="20" stroke="var(--color4)" stroke-dasharray="8 6" />
-			<circle cx="50" cy="50" r="25" stroke="var(--color5)" stroke-dasharray="10 7.5" />
-			<circle cx="50" cy="50" r="30" stroke="var(--color6)" stroke-dasharray="12 9" />
-			<circle cx="50" cy="50" r="35" stroke="var(--color7)" stroke-dasharray="14 10.5" />
-		</svg>
+		<p>Loading...</p>
 	</div>
 </body>
 
 <script type="module" defer>
 	import { BandBook } from './index.js'
-	const book = new BandBook(document.querySelector('main'))
+
+	try {
+		const book = new BandBook(document.querySelector('main'))
+	} catch (error) {
+		const main = document.querySelector('main')
+		console.error('Error initializing BandBook:', error)
+		main.innerHTML = `<p>Error initializing BandBook: ${error.message}</p>`
+		main.classList.remove('bandbook-loading')
+	}
 </script>
 
 </html>
