--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Band Book</title>
-
-	<link rel="stylesheet" href="styles.css">
+	<link rel="manifest" href="manifest.json" />
+	<link rel="stylesheet" href="styles.css" />
 	<script>
 		// Define this here so it does not require cache invalidation
 		const CURRENT_VERSION = "0.0.3"
